--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -3,3 +3,18 @@
 	width: 38px;
 	margin-left: 5px;
 }
+
+
+.todo-item-label {
+	font-size: 16px;
+}
+
+.todo-item-label.done {
+	text-decoration: line-through;
+}
+
+
+.todo-item-label.important {
+	color: tomato;
+	font-weight: bold;
+}
