--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,11 +1,9 @@
 #root {
 	width: 100%;
 	max-width: 600px;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	margin-top: -70px;
+	margin: 0 auto;
+	position: relative;
+	padding: 50px 0;
 }
 
 .header {
