--- a/src/components/todo-list/todo-list.css
+++ b/src/components/todo-list/todo-list.css
@@ -1,3 +1,12 @@
-.todo-list .list-group-item {
+.list-group-item {
 	padding: 10px 20px;
+	margin-top: -1px;
+}
+
+.list-group-item.hide {
+	display: none;
+}
+
+.list-group-item+.list-group-item {
+	border-top-width: 1px !important;
 }
